--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.1.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "wait-for-element-transition": "^3.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
