Update for new domain jwhector.com

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jwhector.github.io/react-portfolio",
+  "homepage": "https://www.jwhector.com/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
